--- a/etl.ipynb
+++ b/etl.ipynb
@@ -16,28 +16,13 @@
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(<cursor object at 0x7f5768ad5710; closed: 0>,\n",
-       " <connection object at 0x7f57684393d8; dsn: 'user=student password=xxx dbname=sparkifydb host=127.0.0.1', closed: 0>)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
     "import psycopg2\n",
     "import pandas as pd\n",
-    "from sql_queries import *\n",
-    "from create_tables import create_database\n",
-    "\n",
-    "create_database()"
+    "from sql_queries import *"
    ]
   },
   {
@@ -69,6 +54,15 @@
     "    \n",
     "    return all_files"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -143,7 +137,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "song_data= df[['song_id', 'title', 'artist_id', 'year', 'duration']].values.tolist()[0]\n",
+    "song_data= df[['song_id', 'title', 'artist_id', 'year', 'duration']]\n",
     "song_data"
    ]
   },
@@ -165,7 +159,6 @@
    },
    "outputs": [],
    "source": [
-    "from sql_queries import *\n",
     "\n",
     "cur.execute(song_table_insert, song_data)\n",
     "conn.commit()"
@@ -202,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "artist_data = df[['artist_id', 'artist_name', 'artist_location', 'artist_latitude', 'artist_longitude']].values.tolist()[0]\n",
+    "artist_data = df[['artist_id', 'artist_name', 'artist_location', 'artist_latitude', 'artist_longitude']]\n",
     "artist_data"
    ]
   },
@@ -733,41 +726,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "time_data = (df['ts'].values, t.dt.hour.values, t.dt.day.values, t.dt.week.values, t.dt.month.values, t.dt.year.values, t.dt.weekday.values)\n",
+    "t.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "time_data = (t.values, t.dt.hour.values, t.dt.day.values, t.dt.week.values, t.dt.month.values, t.dt.year.values, t.dt.weekday.values)\n",
     "column_labels = (['start_time', 'hour', 'day', 'week', 'month', 'year', 'weekday'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "start_time    int64\n",
-       "hour          int64\n",
-       "day           int64\n",
-       "week          int64\n",
-       "month         int64\n",
-       "year          int64\n",
-       "weekday       int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_df = pd.DataFrame(list(zip(*time_data)), columns=column_labels)\n",
     "time_df.dtypes"
@@ -825,7 +811,7 @@
    "outputs": [],
    "source": [
     "user_df = df[['userId', 'firstName', 'lastName', 'gender', 'level']]\n",
-    "user_df.head()"
+    "user_df.dtypes"
    ]
   },
   {
